--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,10 @@
   ],
   "plugins": ["prettier", "@typescript-eslint", "jest", "import"],
   "rules": {
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": "arrow-function" }
+    ],
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "import/extensions": [
       "error",
