--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "eslint": "^8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "styled-components": "^5.3.9",
+    "styled-reset": "^4.4.6",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
@@ -31,6 +35,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "babel-jest": "^29.5.0",
